--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,21 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_main2">Onibus</string>
+    <string-array name="planets_array">
+        <item>Geral</item>
+        <item>APP com problema</item>
+        <item>Onibus faltando</item>
+        <item>Informação errada</item>
+        <item>Informação faltando</item>
+    </string-array>
+    <string-array name="planets_array2">
+        <item>Geral</item>
+        <item>Onibus atrasado</item>
+        <item>Onibus no horario</item>
+        <item>Onibus adiantado</item>
+        <item>Informação errada </item>
+        <item>Informação faltando</item>
+    </string-array>
+    <string name="title_activity_main3">Main3Activity</string>
 </resources>
